[package]
description = "Run efficiently your unit tests written in cairo"
edition     = "2021"
name        = "cairo-foundry"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap            = { version = "3.2.6", features = ["derive"], default-features = false }
cleopatra_cairo = { git = "https://github.com/lambdaclass/cleopatra_cairo" }
env_logger      = "0.9.0"
lazy_static     = "1.4.0"
log             = "0.4.17"
regex           = { version = "1.5.6", default-features = false }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
walkdir         = "2.3.2"
