[package]
edition = "2021"
name    = "cairo-foundry"
version = "0.1.0"
description = "Run efficiently your unit tests written in cairo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.2.6", features = ["derive"] }
regex = "1.5.6"
lazy_static = "1.4.0"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
