[tool.poetry]
name = "cairo-foundry"
version = "0.1.0"
description = "Blazingly fast testing framework for Starknet contracts development inspired by Foundry."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cairo-lang = "^0.10.1"
openzeppelin-cairo-contracts = "0.5.0"

